added crc and pdm2pcm middleware

--- a/audio2/audio2.ioc
+++ b/audio2/audio2.ioc
@@ -11,16 +11,20 @@ MMTConfigApplied=false
 Mcu.CPN=STM32H750XBH6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
-Mcu.IP1=MEMORYMAP
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IPNb=5
+Mcu.IP1=CRC
+Mcu.IP2=MEMORYMAP
+Mcu.IP3=NVIC
+Mcu.IP4=PDM2PCM
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IPNb=7
 Mcu.Name=STM32H750XBHx
 Mcu.Package=TFBGA240
-Mcu.Pin0=VP_SYS_VS_Systick
-Mcu.Pin1=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.PinsNb=2
+Mcu.Pin0=VP_CRC_VS_CRC
+Mcu.Pin1=VP_PDM2PCM_VS_PDM2PCM
+Mcu.Pin2=VP_SYS_VS_Systick
+Mcu.Pin3=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.PinsNb=4
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750XBHx
@@ -137,8 +141,12 @@ RCC.VCO3OutputFreq_Value=258000000
 RCC.VCOInput1Freq_Value=2000000
 RCC.VCOInput2Freq_Value=2000000
 RCC.VCOInput3Freq_Value=2000000
+VP_CRC_VS_CRC.Mode=CRC_Activate
+VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
+VP_PDM2PCM_VS_PDM2PCM.Mode=PDM2PCM_Channel
+VP_PDM2PCM_VS_PDM2PCM.Signal=PDM2PCM_VS_PDM2PCM
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
