removed cubemx sai initialization, because bsp already has it

--- a/audio2/audio2.ioc
+++ b/audio2/audio2.ioc
@@ -16,21 +16,15 @@ Mcu.IP2=MEMORYMAP
 Mcu.IP3=NVIC
 Mcu.IP4=PDM2PCM
 Mcu.IP5=RCC
-Mcu.IP6=SAI1
-Mcu.IP7=SYS
-Mcu.IPNb=8
+Mcu.IP6=SYS
+Mcu.IPNb=7
 Mcu.Name=STM32H750XBHx
 Mcu.Package=TFBGA240
-Mcu.Pin0=PD6
-Mcu.Pin1=PE5
-Mcu.Pin2=PE4
-Mcu.Pin3=PG7
-Mcu.Pin4=VP_CRC_VS_CRC
-Mcu.Pin5=VP_PDM2PCM_VS_PDM2PCM
-Mcu.Pin6=VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.Pin8=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.PinsNb=9
+Mcu.Pin0=VP_CRC_VS_CRC
+Mcu.Pin1=VP_PDM2PCM_VS_PDM2PCM
+Mcu.Pin2=VP_SYS_VS_Systick
+Mcu.Pin3=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.PinsNb=4
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750XBHx
@@ -47,14 +41,6 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PD6.Mode=SAI_A_MasterWithClock
-PD6.Signal=SAI1_SD_A
-PE4.Mode=SAI_A_MasterWithClock
-PE4.Signal=SAI1_FS_A
-PE5.Mode=SAI_A_MasterWithClock
-PE5.Signal=SAI1_SCK_A
-PG7.Mode=SAI_A_MasterWithClock
-PG7.Signal=SAI1_MCLK_A
 PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -88,7 +74,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_PDM2PCM_Init-PDM2PCM-false-HAL-false,5-MX_QUADSPI_Init-QUADSPI-false-HAL-true,6-MX_SAI1_Init-SAI1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_PDM2PCM_Init-PDM2PCM-false-HAL-false,5-MX_SAI1_Init-SAI1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=129000000
 RCC.AHB12Freq_Value=64000000
 RCC.AHB4Freq_Value=64000000
@@ -155,22 +141,12 @@ RCC.VCO3OutputFreq_Value=258000000
 RCC.VCOInput1Freq_Value=2000000
 RCC.VCOInput2Freq_Value=2000000
 RCC.VCOInput3Freq_Value=2000000
-SAI1.ErrorAudioFreq-SAI_A_MasterWithClock=162.45 %
-SAI1.IPParameters=Instance-SAI_A_MasterWithClock,VirtualMode-SAI_A_MasterWithClock,MClockEnable-SAI_A_MasterWithClock,RealAudioFreq-SAI_A_MasterWithClock,ErrorAudioFreq-SAI_A_MasterWithClock,InitProtocol-SAI_A_MasterWithClock,VirtualProtocol-SAI_A_BASIC
-SAI1.InitProtocol-SAI_A_MasterWithClock=Enable
-SAI1.Instance-SAI_A_MasterWithClock=SAI$Index_Block_A
-SAI1.MClockEnable-SAI_A_MasterWithClock=SAI_MASTERCLOCK_ENABLE
-SAI1.RealAudioFreq-SAI_A_MasterWithClock=503.906 KHz
-SAI1.VirtualMode-SAI_A_MasterWithClock=VM_MASTER
-SAI1.VirtualProtocol-SAI_A_BASIC=VM_BASIC_PROTOCOL
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_PDM2PCM_VS_PDM2PCM.Mode=PDM2PCM_Channel
 VP_PDM2PCM_VS_PDM2PCM.Signal=PDM2PCM_VS_PDM2PCM
-VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC.Mode=SAI_A_BASIC
-VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC.Signal=SAI1_VP_$IpInstance_SAIA_SAI_BASIC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
